Added new translations

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -222,8 +222,8 @@ DeveloperTools=Developer tools
 Diff=Diff
 Direct=Direct
 DirectContribution=Direct contribution
-DirectContributionsFlowResultsOverview=Direct contributions to flow results - overview
-DirectContributionsImpactCategoryResultsOverview=Direct contributions to impact category results - overview
+DirectContributionsFlowResultsOverview=Top 5 contributions to flow results - overview
+DirectContributionsImpactCategoryResultsOverview=Top 5 contributions to impact category results - overview
 DirectImpact=Direct impact
 Direction=Direction
 DisconnectFromRepository=Disconnect from repository
