--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -8,23 +8,30 @@ Actors=Actors
 Add=Afegir
 AddConnectedProcesses=Afegir productes connectats
 AddedValue=Valor afegit
+AddIndicator=Afegir indicador
 AdditionalInformation=Informaci\u00f3 addicional
 AddNewChildCategory=Afegir nova subcategoria
 Address=Adre\u00e7a
+AddScore=Afegir puntuaci\u00f3
 AddSection=Afegir secci\u00f3
 AddToMethodParameters=Afegir als par\u00e0metres del m\u00e8tode
 AdministrativeInformation=Informaci\u00f3 administrativa
+Aggregation=Agregar
+AggregationType=Tipus d'agregaci\u00f3
 Allocation=Assignaci\u00f3
 AllocationFactors=Factors d'assignaci\u00f3
 AllocationMethod=M\u00e8tode d'assignaci\u00f3
+ALocationCodeIsRequired=Cal un codi d'assignaci\u00f3
 AlreadyConnected=Ja connectat
 AlreadyPresent=Ja present
 Amount=Quantitat
 Analysis=An\u00e0lisi
 AnalysisResultOf=An\u00e0lisi de resultat de
 AnalyzingForProblems=Analitzant per problemes
+AnErrorOccuredWhileReceivingCommitData=Ha succe\u00eft un error
 ApplyFormatToInputsOutputs=Aplicar el format a les entrades/sortides de l'editor de proc\u00e9s
 AsDefinedInProcesses=Segons es defineix en els processos
+AssessDataQuality=Avaluar qualitat de dades
 AssignUnits=Assignar unitats
 Author=Autor/a
 AvoidedProduct=Producte evitat
@@ -81,6 +88,7 @@ CommitChangesToRepository=Confirmar canvis al repositori
 CommitingChanges=Confirmant canvis
 CommitMessage=Missatge de confirmaci\u00f3
 CommitReferenceNotice=Referenciar canvis que tamb\u00e9 necessiten ser confirmats
+Compare=Comparar
 ComparingWithRepository=Comparar amb el repositori
 Complete=Completa
 CompleteReferenceData=Dades de refer\u00e8ncia complets
@@ -128,6 +136,7 @@ CreateProcess=Crear proc\u00e9s
 CreateProcesslink=Crear enlla\u00e7 de proc\u00e9s
 CreateProductSystem=Crear sistema de producte
 CreatesANewActor=Crea un nou actor
+CreatesANewDataQualitySystem=Crea un nou sistema de qualitat de dades
 CreatesANewFlow=Crea un nou flux
 CreatesANewFlowProperty=Crea una nova propietat de flux
 CreatesANewImpactMethod=Crea un nou m\u00e8tode d'avaluaci\u00f3 d'impacte
@@ -156,6 +165,7 @@ DatabaseName=Nom de la base de dades
 DatabaseNeedsUpdate=La base de dades seleccionada correspon a una versi\u00f3 m\u00e9s nova d'openLCA.
 DatabaseRenameError=El nom introdu\u00eft
 DatabaseType=Tipus de base de dades
+DatabaseValidationCompleteNoErrorsWereFound=Validaci\u00f3 de la base de dades completa. No s'han trobat errors.
 DatabaseVersionCheckFailed=No s'ha pogut identificar la versi\u00f3 de la base de dades. \u00c9s una base de dades d'openLCA?
 DatabaseWasExportedToFile=Base de dades exportada a l'arxiu
 DataCollectionPeriod=Per\u00edode de recollida de dades
@@ -200,8 +210,8 @@ DeveloperTools=Eines de programaci\u00f3
 Diff=Fitxer de difer\u00e8ncies
 Direct=Directes
 DirectContribution=Contribuci\u00f3 directa
-DirectContributionsFlowResultsOverview=Contribuciones directes als resultats de fulx - resum
-DirectContributionsImpactCategoryResultsOverview=Contribuciones directes als resultats de categories d'impacte
+DirectContributionsFlowResultsOverview=Contribucions directes als resultats de fulx - resum
+DirectContributionsImpactCategoryResultsOverview=Contribucions directes als resultats de categories d'impacte - resum
 DirectImpact=Impacte directe
 Direction=Direcci\u00f3
 DisconnectFromRepository=Desconnectar del repositori
@@ -225,6 +235,7 @@ EnterLocationNameAndCode=Sisplau, introdueix un nom i un codi per a la nova ubic
 Error=Error
 ErrorPopupMessage=Revisa l'arxiu de registre per m\u00e9s informaci\u00f3
 ErrorPopupTitle=Hi ha hagut un error inesperat
+Errors=Errors
 EvaluateLocations=Avaluar per les ubicacions existents
 EvaluatingLocations=Avaluant ubicacions
 EvaluationSchema=Esquema d'avaluaci\u00f3
@@ -451,8 +462,8 @@ NameCannotBeEmpty=El nom no pot estar buit
 NameEmptyOrAlreadyExists=El nom est\u00e0 buit o ja existeix
 NameShouldBeDifferent=El nom ha de ser diferent
 NeedOpenDatabase=Primer cal obrir una base de dades
-NetCosts=Costos nets
 Netcosts=Costos nets
+NetCosts=Costos nets
 Never=Mai
 NewActor=Nou actor
 NewCategory=Nova categoria
