--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -8,23 +8,30 @@ Actors=Atores
 Add=Adicionar
 AddConnectedProcesses=Adicionar conex\u00e3o de processos
 AddedValue=Valor adicionado
+AddIndicator=Adicionar indicador
 AdditionalInformation=Informa\u00e7\u00e3o adicional
 AddNewChildCategory=Adicionar nova Categoria prim\u00e1ria
 Address=Endere\u00e7o
+AddScore=Adicionar pontua\u00e7\u00e3o
 AddSection=Adicionar sess\u00e3o
 AddToMethodParameters=Adicionar aos par\u00e2metros do m\u00e9todo
 AdministrativeInformation=Informa\u00e7\u00f5es administrativas
+Aggregation=Agrega\u00e7\u00e3o
+AggregationType=Tipo de agrega\u00e7\u00e3o
 Allocation=Aloca\u00e7\u00e3o
 AllocationFactors=Alocar fatores
 AllocationMethod=M\u00e9todo de aloca\u00e7\u00e3o
+ALocationCodeIsRequired=C\u00f3digo da localiza\u00e7\u00e3o necess\u00e1rioUm err
 AlreadyConnected=J\u00e1 conectado
 AlreadyPresent=J\u00e1 presente
 Amount=Quantidade
 Analysis=An\u00e1lises
 AnalysisResultOf=An\u00e1lise dos resultados
 AnalyzingForProblems=Analisando problemas
+AnErrorOccuredWhileReceivingCommitData=Um erro ocorreu durante o recebimento das informa\u00e7\u00f5es
 ApplyFormatToInputsOutputs=Aplicar formato em entradas / sa\u00eddas no editor do processo
 AsDefinedInProcesses=Conforme definido no processo
+AssessDataQuality=Avaliar qualidade dos dados
 AssignUnits=Atribuir unidades
 Author=Autor
 AvoidedProduct=Produto descartado
@@ -35,7 +42,10 @@ BaseUncertainty=Base de incerteza
 Browse=Navegar
 BrowserConfiguration=Configura\u00e7\u00e3o do navegador
 BuildNextTier=Constru\u00e7\u00e3o do pr\u00f3ximo n\u00edvel
-BuildSupplyChain=Construir cadeia de abastecimento
+BuildSupplyChain=Construir cadeia produtiva
+Bulkreplace=Substitui\u00e7\u00e3o em massa
+BulkreplaceFlows=Substitui\u00e7\u00e3o em massa de fluxo
+BulkreplaceProviders=Substitui\u00e7\u00e3o em massa provedor
 Calculate=Calcular
 CalculateCosts=Calcular custos
 CalculateDefaultValues=Calcular valores padr\u00e3o
@@ -64,6 +74,8 @@ Change=Trocar
 CheckAgainstLibraries=Verificar de acordo com as bibliotecas
 CheckForUpdates=Verificar atualiza\u00e7\u00f5es
 CheckingAgainstLibraries=Checagem de acordo com as bibliotecas
+CheckingOutCommit=Verificando entrega
+Checkout=Verificando
 ChooseDirectory=Escolher diret\u00f3rio
 City=Cidade
 ClearData=Limpar dados
@@ -78,9 +90,12 @@ Comma=V\u00edrgula
 Comment=Coment\u00e1rios
 Commit=Validar...
 CommitChangesToRepository=Validar as altera\u00e7\u00f5es para o reposit\u00f3rio
+CommitDate=Validar data
 CommitingChanges=Validando altera\u00e7\u00f5es
 CommitMessage=Validar mensagem
 CommitReferenceNotice=As mudan\u00e7as referenciadas tamb\u00e9m precisam ser validadas
+Committer=Comiss\u00e3o
+Compare=Comparar
 ComparingWithRepository=Comparando com o reposit\u00f3rio
 Complete=Completo
 CompleteReferenceData=Dados de refer\u00eancia completos
@@ -119,6 +134,7 @@ CouldNotFindKMLData=N\u00e3o foi poss\u00edvel encontrar dados KML no arquivo qu
 CouldNotOpenDatabase=N\u00e3o foi poss\u00edvel abrir o banco de dados
 CouldNotOverwriteFile=N\u00e3o foi poss\u00edvel substituir o arquivo
 Country=Pa\u00eds
+Coverage=Cobertura
 CreateANewDatabase=Criar nova base de dados
 CreateANewProductFlowForTheProcess=Criar um novo fluxo de produto para o processo 
 CreateDatabase=Criar base de dados
@@ -128,6 +144,7 @@ CreateProcess=Criar processo
 CreateProcesslink=Criar um link para o processo
 CreateProductSystem=Criar um sistema de produto
 CreatesANewActor=Cria um novo ator
+CreatesANewDataQualitySystem=Cria um novo sistema de qualidade de dados
 CreatesANewFlow=Cria um novo fluxo
 CreatesANewFlowProperty=Cria um novo propriedade de fluxo
 CreatesANewImpactMethod=Cria um novo m\u00e9todo de impacto
@@ -156,6 +173,7 @@ DatabaseName=Nome do banco de dados
 DatabaseNeedsUpdate=O determinado banco de dados \u00e9 mais novo que esta vers\u00e3o openLCA.
 DatabaseRenameError=O nome n\u00e3o \u00e9 v\u00e1lido ou j\u00e1 existe um banco de dados com este nome.
 DatabaseType=Tipo de base de dados
+DatabaseValidationCompleteNoErrorsWereFound=Valida\u00e7\u00e3o do banco de dados conclu\u00edda. Nenhum erro foi encontrado.
 DatabaseVersionCheckFailed=N\u00e3o foi poss\u00edvel obter a vers\u00e3o do banco de dados. Este \u00e9 um banco de dados openLCA?
 DatabaseWasExportedToFile=Banco de dados foi exportado para arquivo
 DataCollectionPeriod=Per\u00edodo de coleta de dados
@@ -163,6 +181,10 @@ DataCompleteness=Integridade dos dados
 DataDocumentor=Documenta\u00e7\u00e3o
 DataGenerator=Gera\u00e7\u00e3o de dados
 DataQuality=Qualidade dos dados
+DataQualityEntry=Entrada de qualidade de dados
+DataQualityProperties=Propriedades de qualidade dos dados
+DataQualitySystem=Sistema de qualidade de dados
+DataQualitySystems=Sistemas de qualidade de dados
 DataSelection=Sele\u00e7\u00e3o de dados
 DataSet=Dataset
 DataSetOtherEvaluation=Outra avalia\u00e7\u00e3o do dataset
@@ -209,6 +231,7 @@ Display=Exibi\u00e7\u00e3o
 Doi=Doi - Identificador de objeto digital
 DoNotShowThisMessageAgain=N\u00e3o mostrar essa mensagem novamente
 Dot=Ponto
+DownloadingData=Transferindo dados
 DoYouReallyWantToDelete=Voc\u00ea realmente quer apagar {0}
 Economic=Econ\u00f4mico
 EcoSpold2Export=Exportar EcoSpold 2 
@@ -225,13 +248,17 @@ EnterLocationNameAndCode=Por favor, indique um nome e o c\u00f3digo do novo loca
 Error=Erro
 ErrorPopupMessage=Consulte o arquivo de log para obter mais informa\u00e7\u00f5es
 ErrorPopupTitle=Ocorreu um erro inesperado
+Errors=Erros
 EvaluateLocations=Avaliar para locais existentes
 EvaluatingLocations=Avaliando locais
 EvaluationSchema=Sistema de avalia\u00e7\u00e3o
 Example=Exemplo
 ExcelExport=Exportar para excell
+ExchangeDataQualitySchema=Altera\u00e7\u00e3o da qualidade de dados\u00a0
 ExchangesAreUsed=Uma ou mais trocas selecionadas j\u00e1 s\u00e3o utilizadas em um sistema de produto e, portanto, n\u00e3o pode ser exclu\u00edda.
+ExcludeExchangesWithDefaultProviders=Excluir altera\u00e7\u00f5es com provedores padr\u00e3o
 ExcludeZeroEntries=Excluir entradas nulas
+ExcludeZeroValues=Excluir valores zero
 Expand=Ampliar
 ExpandAll=Ampliar tudo
 Export=Exportar...
@@ -274,12 +301,15 @@ Flow=Fluxo
 FlowCategory=Categoria de fluxo
 FlowContributions=Contribui\u00e7\u00e3o de fluxo
 FlowContributionsToProcessResults=Contribui\u00e7\u00f5es de fluxo para resultados dos processos
+FlowDataQualitySchema=Esquema de qualidade de dados de fluxo
+FlowDataQualityStatistics=Estat\u00edsticas de qualidade dos dados de fluxo
 FlowProperties=Propriedades de fluxo
 FlowProperty=Propriedade de fluxo
 FlowPropertyIsUsed=A propriedade de fluxo \u00e9 usada em processos ou m\u00e9todos de impacto.
 FlowPropertyType=Tipo de propriedade de fluxo
 FlowResults=Resultados do fluxo
 Flows=Fluxos
+FlowSchema=Esbo\u00e7o de fluxos
 FlowType=Tipo de fluxo
 Folder=Pasta
 Formula=F\u00f3rmula
@@ -305,6 +335,9 @@ GoalAndScope=Objetivo e escopo
 Group=Grupo
 Grouping=Agrupamento
 Groups=Grupos
+HalfUp=Meia parte
+HasUncertainties=Tem certeza
+HEADRevision=Revis\u00e3o principal
 Help=&Ajuda
 Hide=Fechar
 HighOpportunity=Oportunidade favor\u00e1vel
@@ -313,6 +346,7 @@ Home=P\u00e1gina inicial
 Host=Hospedar
 Hourly=Hor\u00e1rio
 HTMLGraph=Gr\u00e1fico HTML
+Id=Id
 ILCD_AUTHENTICATION_FAILED_MSG=A autentica\u00e7\u00e3o falhou. Verifique seu nome de usu\u00e1rio e senha.
 ILCD_CONNECTION_FAILED_MSG=A conex\u00e3o falhou. Por favor, verifique seus dados de conex\u00e3o de rede, URL e do usu\u00e1rio.
 ILCD_CONNECTION_WORKS_MSG="Conex\u00e3o funcionando"
@@ -348,9 +382,12 @@ ImportingKMLData=Importando dados KML
 ImportingXMLData=Importando dados XML (formato EcoSpold 2)
 ImportKMLGeographies=Importar dados geogr\u00e1ficos em KML
 IncludeCostCalculation=Incluir o c\u00e1lculo de custos
+Indicator=Indicador
 IndicatorBarChart=Indicador de gr\u00e1fico de barras
+Indicators=Indicadores
 IndicatorsAndParameters=Indicadores e par\u00e2metros
 IndicatorScore=Indicator de pontua\u00e7\u00e3o
+IndicatorsScores=Indicadores & Pontua\u00e7\u00f5es
 Information=Informa\u00e7\u00e3o
 InfrastructureFlow=Infraestrutura do fluxo
 InfrastructureProcess=Infraestrutura do processo
@@ -374,6 +411,7 @@ InvalidValue=Valor inv\u00e1lido
 Inventory=Invent\u00e1rio
 InventoryResult=Resultado do invent\u00e1rio
 InventoryResults=Resultados do invent\u00e1rio
+IsDefault=P\u00e1dr\u00e3o
 IsInvalidFormula=F\u00f3rmula inv\u00e1lida
 IsNotValidNumber=N\u00e3o \u00e9 um n\u00famero v\u00e1lido
 IsNotValidParameterName=N\u00e3o \u00e9 um nome de par\u00e2metro v\u00e1lido
@@ -381,6 +419,7 @@ IsReference=Refer\u00eancia
 KeepLocalModel=Mantenha o modelo local
 KeepModelDeleted=Mantenha o modelo deletado
 KmlEditor=Editor\u00a0KML\u00a0
+Label=Legenda
 Language=Linguagem
 LastChange=\u00daltima altera\u00e7\u00e3o
 LastModificationDate=\u00daltima data de \u00a0modifica\u00e7\u00e3o
@@ -425,6 +464,7 @@ MediumOpportunity=Oportunidade mediana\u00a0
 MediumRisk=Risco M\u00e9dio
 MemoryToHighMessage=O valor de mem\u00f3ria \u00e9 muito alto para seu sistema operacional.
 MemoryToLowMessage=O valor de mem\u00f3ria deve ter pelo menos 256 MB.
+Message=Mensagem
 Methods=M\u00e9todos
 MinimalTree=\u00c1rvore m\u00ednima
 Minimize=Minimizar
@@ -450,9 +490,10 @@ Name=Nome
 NameCannotBeEmpty=O nome n\u00e3o pode estar vazio
 NameEmptyOrAlreadyExists=O nome est\u00e1 vazio ou j\u00e1 existe
 NameShouldBeDifferent=O nome deve ser diferente
+NaValueHandling=Valor n\u00e3o dispon\u00edvel
 NeedOpenDatabase=Voc\u00ea precisa abrir a base de dados
-NetCosts=Custo liquido
 Netcosts=Custo liquido
+NetCosts=Custo liquido
 Never=Nunca
 NewActor=Novo ator
 NewCategory=Nova categoria
@@ -462,6 +503,7 @@ NewDatabase=Nova base de dados
 NewDatabase_AlreadyExists=J\u00e1 existe uma base de dados com este nome
 NewDatabase_InvalidName=O nome n\u00e3o \u00e9 valido como identificador (caracteres, n\u00fameros e sublinhados s\u00e3o permitidos)
 NewDatabase_NameToShort=O nome do banco de dados deve ter pelo menos 4 caracteres
+NewDataQualitySystem=Novo sistema de qualidade de dados
 NewFlow=Novo fluxo
 NewFlowProperty=Nova propriedade de fluxo
 NewImpactCategory=Nova categoria de \u00a0impacto
@@ -483,6 +525,7 @@ NoChangesInLocalDb=N\u00e3o ocorreram altera\u00e7\u00f5es no banco de dados loc
 NoCostCategorySelected=Nenhuma categoria de custo selecionada
 NoData=N\u00e3o h\u00e1 dados
 NoDatabaseOpened=Nenhum banco de dados aberto
+NoDataQualitySystemSpecified=- Nenhum sistema de qualidade de dados especificado -
 NoDescription=Nenhuma descri\u00e7\u00e3o
 NoDistribution=Nenhuma distribui\u00e7\u00e3o
 NoExportFilesSelected=Nenhum arquivo de exporta\u00e7\u00e3o selecionado
@@ -492,6 +535,7 @@ NoProjectVaraintsAreDefined=N\u00e3o h\u00e1 variantes do projeto definidas
 NoQuantitativeReferenceSelected=Nenhuma refer\u00eancia quantitativa selecionada
 NoReferenceFlowPropertySelected=Nenhuma propriedade de fluxo de refer\u00eancia selecionada
 NoReferenceProcessSelected=Nenhum processo de refer\u00eancia seleccionado
+NoReferenceSet=Nenhum conjunto de refer\u00eancia
 NoRisk=N\u00e3o h\u00e1 riscos
 NormalDistribution=Distribui\u00e7\u00e3o normal
 NormalisationBarChart=Normaliza\u00e7\u00e3o - gr\u00e1fico de barras
@@ -506,12 +550,14 @@ NoShapefileParameterSelected=N\u00e3o h\u00e1 nenhum arquivo de par\u00e2metro s
 NotAnIntegerNumber=O valor fornecido n\u00e3o \u00e9 um n\u00famero inteiro.
 NotApplicable=N\u00e3o se aplica
 Note=Anota\u00e7\u00e3o
+NoteDefaultProviders=Observa\u00e7\u00e3o:
 Notification=Notifica\u00e7\u00e3o
 NoUnitGroupSelected=Nenhum unidade de grupo selecionada
 NumberFormatPage_Description=Defina o n\u00famero de casas decimais para a exibi\u00e7\u00e3o de n\u00fameros.
 NumberOfDecimalPlaces=N\u00famero de casas decimais
 NumberOfIterations=Numeros de intera\u00e7\u00e3o
 NumberOfSimulations=N\u00famero de simula\u00e7\u00f5es
+OfProduct=Produto de
 OK=OK!
 OnlineHelp=Ajuda online
 Open=Aberto
@@ -546,18 +592,24 @@ PhysicalAndEconomicAllocation=Aloca\u00e7\u00e3o f\u00edsica e econ\u00f4mica
 PleaseEnterAName=Por favor, entre com o nome
 PleaseEnterANewName=Por favor, entre com o novo nome
 PleaseEnterTheNameOfTheNewCategory=Por favor, insira o nome da nova categoria:
+PleaseSelectThePropertiesForTheDataQualityAssessment=Selecione as propriedades para a avalia\u00e7\u00e3o da qualidade dos dados
 PleaseSpecifyHost=Por favor, especificar uma hospedagem
 PleaseSpecifyPortNumber=Por favor, especifique um n\u00famero de porta
 PleaseSpecifyUser=Por favor, especifique um usu\u00e1rio
 Point=Ponto
 Polygon=Pol\u00edgono
 Port=Porta
+Position=Posi\u00e7\u00e3o
 Prefer=Prefer\u00eancia: {0}
+Preparing=Preparando
+PreviousCommit=Envio anterior
 Price=Valor
 Process=Processos
 ProcessContributionChart=Processo gr\u00e1fico de contribui\u00e7\u00e3o
 ProcessContributions=Contribui\u00e7\u00f5es de processo
 ProcessCosts=Custos de processo
+ProcessDataQualitySchema=Esquema da qualidade dos dados do processo
+ProcessDataQualityStatistics=Estat\u00edstica da qualidade dos dados do processo
 ProcessDocumentation=Documenta\u00e7\u00e3o do processo
 Processes=Processos
 ProcessEvaluationAndValidation=A avalia\u00e7\u00e3o do processo e valida\u00e7\u00e3o
@@ -565,6 +617,7 @@ ProcessExcelImportDescription=Processos de importa\u00e7\u00e3o do MS Excel
 ProcessFlowName=Processo/Nome do Fluxo
 ProcessLinks=Link do Processo
 ProcessResults=Resultados do Processo
+ProcessSchema=Esquema do processo
 ProcessType=Tipo de Processo
 ProducedBy=Produzido por
 Product=Produto
@@ -579,6 +632,7 @@ ProjectResults=Resultados do projeto
 Projects=Projetos
 ProjectSetup=Configurar projeto
 Properties=Propriedades
+Providers=Provedor
 Publication=Publica\u00e7\u00e3o
 QuantitativeReference=Refer\u00eancia quantitativa
 Quantity=Quantidade
@@ -608,10 +662,14 @@ RemoteDatabase=Base de dados remota
 RemoteModel=Modelo remoto
 Remove=Remover
 RemoveConnections=Remover conex\u00e3o
+RemoveIndicator=Remover indicador
 RemoveObject=Remover objeto
+RemoveScore=Remover pontua\u00e7\u00e3o
 RemoveSelected=Remover sele\u00e7\u00e3o
 RemoveSupplyChain=Remover \u00a0cadeia de abastecimento
 Rename=Renomear
+ReplaceFlow=Substituir fluxo
+ReplaceProvider=Substituir fornecedor
 Report=Relat\u00f3rio
 ReportName=Nome do relat\u00f3rio
 ReportParameters=Relatar par\u00e2metros
@@ -629,6 +687,7 @@ ResultsOf=Resultados de
 ResultsOfProject=Resultados do projeto
 Reviewer=Revisor
 RiskLevel=N\u00edvel de risco
+RoundingMode=Modo de arredondamento
 Route=Rota
 RunCalculation=C\u00e1lculo de execu\u00e7\u00e3o
 SamplingProcedure=Procedimento de amostragem
@@ -641,10 +700,25 @@ SaveAsImage=Salvar como imagem
 SaveChanges=Salvar altera\u00e7\u00e3o
 SaveChangesQuestion=Voc\u00ea deseja salvar as altera\u00e7\u00f5es?
 SavingDiagramAsImageIn=Salvando diagrama como imagem em {0}
+Scores=Pontua\u00e7\u00f5es
 Search=Pesquisar
+SearchAllTypes=Pesquisar todos os tipos
+SearchInActors=Pesquisar em atores
+SearchInDataQualitySystems=Pesquisa em sistemas de qualidade de dados
+SearchInFlowProperties=Pesquisar em propriedades de fluxo
+SearchInFlows=Pesquisar em fluxos
 Searching=Pesquisando...
 SearchingForReferencedChanges=Buscando por trocas referenciadas
 SearchingForUnits=Buscando unidades ...
+SearchInLCIAMethods=Pesquisar em m\u00e9todos LCIA
+SearchInLocations=Pesquisar em localiza\u00e7\u00e3o
+SearchInParameters=Pesquisar em par\u00e2metros
+SearchInProcesses=Pesquisar em processos
+SearchInProductSystems=Pesquisar em sistemas de produto
+SearchInProjects=Pesquisar em projetos
+SearchInSocialIndicators=Pesquisar em indicadores socials
+SearchInSources=Pesquisar em fontes
+SearchInUnitGroups=Pesquisar em unidade de grupos
 SearchParameters=Par\u00e2metros de pesquisa
 SearchProvidersFor=Pesquisar provedores
 SearchRecipientsFor=Pesquisar destinat\u00e1rios
@@ -652,7 +726,9 @@ SearchResults=Procurar resultados
 Section=Sess\u00e3o
 Select=Selecionar\u00a0{0}
 SelectADirectory=Escolha um diret\u00f3rio
+SelectAll=Selecionar todos
 SelectAUserInterfaceLanguage=Selecione um idioma da interface do usu\u00e1rio
+SelectedCommit=Selecionar entregas
 SelectedParameterWasAlreadyAdded=O par\u00e2metro selecionado j\u00e1 foi adicionado neste m\u00e9todo AICV
 SelectImportFiles=Selecionar arquivos para importa\u00e7\u00e3o
 SelectLanguageNoteMessage=As altera\u00e7\u00f5es n\u00e3o ter\u00e3o efeito at\u00e9 openLCA ser reiniciado
@@ -664,6 +740,7 @@ SelectRecipients=Selecione os destinat\u00e1rios
 SelectTheExportFile=Selecionar arquivo para importa\u00e7\u00e3o
 SelectTheParameterYouWantToReferTo=Selecione o par\u00e2metro que voc\u00ea quer referir 
 Semicolon=Ponto e v\u00edrgula\u00a0
+ServerConfigurations=Salvar configura\u00e7\u00f5es
 ServerUrl=Servidor do URL
 SetAsReferenceCurrency=Definir como moeda de refer\u00eancia?
 SetReferenceCurrencyQuestion=Voc\u00ea deseja definir esta moeda como a moeda de refer\u00eancia do banco de dados?
@@ -675,6 +752,7 @@ ShareRepository=Reposit\u00f3rio compartilhado
 SharingRepository=Compartilhamento de reposit\u00f3rio
 Show=Mostrar
 ShowFormulas=Mostrar f\u00f3rmula
+ShowInHistory=Apresentar no hist\u00f3rico
 ShowInMap=Mostrar no mapa
 ShowOutline=Mostrar esbo\u00e7o
 Showperspectives=Mostrar perspectivas
@@ -688,8 +766,10 @@ SingleScoreTable=Tabela de pontua\u00e7\u00e3o
 SocialAspect=Aspecto social
 SocialAspects=Aspectos sociais
 SocialAssessment=Avalia\u00e7\u00e3o social
+SocialDataQualitySchema=Esquema de qualidade de dados sociais
 SocialIndicator=Indicador social
-SocialIndicators=Indicadores socials
+SocialIndicators=Indicadores sociais
+SocialSchema=Esquema social
 SolvingProblems=Solu\u00e7\u00e3o de problemas
 SomeParametersWereNotAdded=Alguns par\u00e2metros n\u00e3o foram adicionados porque seus nomes estavam inv\u00e1lidos ou um par\u00e2metro com o mesmo nome j\u00e1 existe.
 Source=Fonte
@@ -702,8 +782,11 @@ Start=In\u00edcio
 StartDate=Data de in\u00edcio
 Statistics=Estat\u00edsticas
 SubCategory=Subcategoria
+SubgroupByProcesses=Subgrupo por processos
 Sum=Soma
+Summable=Soma total
 Synonyms=Sin\u00f4nimos
+SystemDefinesUncertainties=Sistema defini\u00e7\u00e3o de incertezas
 SystemProcess=Sistema de produto
 SystemSaveProceedQuestion=Para realizar a tarefa solicitada do sistema de produto voc\u00ea deve salvar. Voc\u00ea quer prosseguir?
 Tab=Tabela
@@ -731,6 +814,7 @@ TotalRequirements=Total das requisi\u00e7\u00f5es
 Tree=\u00c1rvore
 TriangleDistribution=Distribui\u00e7\u00e3o Tri\u00e2ngular
 Type=Tipo
+Uncertainties=Incertezas
 Uncertainty=Incerteza
 UncertaintyDistribution=Distribui\u00e7\u00e3o de incerteza
 UniformDistribution=Distribui\u00e7\u00e3o uniforme
@@ -749,6 +833,7 @@ Unmark=Desmarcar
 UnshareDescription=Especificar o usu\u00e1rio com quem voc\u00ea n\u00e3o deseja compartilhar o reposit\u00f3rio\u00a0
 UnshareRepository=Descompartilhar reposit\u00f3rio
 UnsharingRepository=Reposit\u00f3rio descompartilhado
+Up=Acima
 Update=Atualizar
 UpdateDatabase=Atualizar Base de dados
 UpdateDatabaseQuestion=O Banco de dados selecionado precisa de uma atualiza\u00e7\u00e3o. Voc\u00ea quer execut\u00e1-la?
@@ -765,9 +850,12 @@ Usage=Uso
 UsageOf=Uso de
 UseBrowserFeatures=Use recursos do navegador
 UsedInProcesses=Usado no processos
+UseMaximumScoreForZeroValues=Utilizar pontua\u00e7\u00e3o m\u00e1xima para valores zero
 User=Usu\u00e1rio
 UserFriendlyName=Nome de usu\u00e1rio amig\u00e1vel
 Username=Nome de usu\u00e1rio
+Validate=Valida\u00e7\u00e3o
+ValidatingDatabase=Validando a base de dados
 Value=Valor
 Variant=Variante
 VariantDescriptionTable=Tabela de descri\u00e7\u00e3o da variante
@@ -777,13 +865,17 @@ VersionNewer=Vers\u00e3o recente
 VeryHighRisk=Risco elevado
 VeryLowRisk=Risco Baixo
 Warning=Aviso
+Warnings=Avisos
 Waste=Perdas
 Website=Website
 Weekly=Semanal
+WeightedAverage=M\u00e9dia ponderada
+WeightedSquaredAverage=M\u00e9dia ponderada do quadrado
 Weighting=Pondera\u00e7\u00e3o
 WeightingFactor=Fator de pondera\u00e7\u00e3o
 Welcome=Bem vindo!
 Window=Janela
+With=com
 WithPassword=Com senha
 Year=Ano
 Yes=Sim
