added risk level: NO_OPPORTUNITY

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -533,6 +533,7 @@ NoDataQualitySystemSpecified=-- No data quality system specified --
 NoDescription=No description
 NoDistribution=No distribution
 NoExportFilesSelected=No export files selected
+NoOpportunity=No opportunity
 NoParameterSelected=No parameter selected
 NoProjectVaraintsAreDefined=No project variants are defined
 NoQuantitativeReferenceSelected=No quantitative reference selected
